tests/spec/core_functions/color/hwb/error/four_args.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/hwb/error/four_args.hrx"

mod alpha {

    // Ignoring "unit", error tests are not supported yet.

    // Ignoring "var", error tests are not supported yet.
}
mod blackness {

    // Ignoring "too_high", error tests are not supported yet.

    // Ignoring "too_low", error tests are not supported yet.

    // Ignoring "test_type", error tests are not supported yet.
    mod unit {

        // Ignoring "none", error tests are not supported yet.

        // Ignoring "wrong", error tests are not supported yet.
    }

    // Ignoring "var", error tests are not supported yet.
}
mod hue {

    // Ignoring "test_type", error tests are not supported yet.

    // Ignoring "var", error tests are not supported yet.
}
mod whiteness {

    // Ignoring "too_high", error tests are not supported yet.

    // Ignoring "too_low", error tests are not supported yet.

    // Ignoring "test_type", error tests are not supported yet.
    mod unit {

        // Ignoring "none", error tests are not supported yet.

        // Ignoring "wrong", error tests are not supported yet.
    }

    // Ignoring "var", error tests are not supported yet.
}
